Правки после ревью, поставил модификатор Private на свойства в классе CounterOfTrainings + геттеры + поправил логику с учетом геттеров