@@ -169,8 +169,8 @@ public class TimetableTest {
 
     List<CounterOfTrainings> result = timetable.getCountByCoaches();
     assertEquals(1, result.size());
-    assertEquals(3, result.get(0).trainingCount);
-    assertEquals(coachOne, result.get(0).coach);
+    assertEquals(3, result.getFirst().getTrainingCount());
+    assertEquals(coachOne, result.getFirst().getCoach());
   }
 
   @Test
@@ -192,11 +192,11 @@ public class TimetableTest {
     List<CounterOfTrainings> result = timetable.getCountByCoaches();
     assertEquals(2, result.size());
 
-    assertEquals(coachTwo, result.get(0).coach);
-    assertEquals(4, result.get(0).trainingCount);
+    assertEquals(coachTwo, result.get(0).getCoach());
+    assertEquals(4, result.get(0).getTrainingCount());
 
-    assertEquals(coachOne, result.get(1).coach);
-    assertEquals(2, result.get(1).trainingCount);
+    assertEquals(coachOne, result.get(1).getCoach());
+    assertEquals(2, result.get(1).getTrainingCount());
   }
 
 }
